Revise handlers page and fix some small mistakes.

--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -10,6 +10,7 @@
         %li= link_to 'Generating an adapter', '/plugin-authoring/adapters/#generating'
         %li= link_to 'Configuration', '/plugin-authoring/adapters/#configuration'
         %li= link_to 'Required methods', '/plugin-authoring/adapters/#required-methods'
+        %li= link_to 'Helper methods', '/plugin-authoring/adapters/#helper-methods'
         %li= link_to 'Block syntax', '/plugin-authoring/adapters/#block-syntax'
     %li
       = link_to 'Handlers', '/plugin-authoring/handlers/'
