Add an event route section to the handlers guide.

--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -17,6 +17,7 @@
       %ul
         %li= link_to 'Chat routes', '/plugin-authoring/handlers/#chat-routes'
         %li= link_to 'HTTP routes', '/plugin-authoring/handlers/#http-routes'
+        %li= link_to 'Event routes', '/plugin-authoring/handlers/#event-routes'
         %li= link_to 'Helper methods', '/plugin-authoring/handlers/#helper-methods'
         %li= link_to 'Timers', '/plugin-authoring/handlers/#timers'
         %li= link_to 'Configuration', '/plugin-authoring/handlers/#configuration'
