--- a/source/plugin-authoring/publishing.html.haml
+++ b/source/plugin-authoring/publishing.html.haml
@@ -12,7 +12,7 @@ title: "Plugin Authoring: Publishing"
       .page-header.first-heading
         %h2 Publishing
 
-      %p When you're finished writing your plugin, you should publish it. This allows other Lita users to take advantage of your work and will cause it to appear in the catalog on the <a href="https://www.lita.io/plugins">plugins</a> page.
+      %p When you're finished writing your plugin, you are encouraged to publish it publicly. This allows other Lita users to take advantage of your work and will cause it to appear in the catalog on the <a href="https://www.lita.io/plugins">plugins</a> page.
 
       %p If you used one of Lita's generator commands to create the files for your plugin initially, then most of the work is done for you. Here's a checklist of things to go over before publication:
 
@@ -23,7 +23,7 @@ title: "Plugin Authoring: Publishing"
           %p To have your plugin's type (adapter or handler) included in its information on the <a href="https://www.lita.io/plugins">plugins</a> page, make sure the metadata field in the gemspec is set correctly. It should look like this:
 
           %pre
-            %code.ruby spec.metadata = { "lita_plugin_type" => "handler" }
+            %code.ruby spec.metadata = { "lita_plugin_type" =&gt; "handler" }
 
           %p Substitute "adapter" as the value for adapter plugins and "extension" as the value for extension plugins.
 
