Document how plugins are loaded.

--- a/source/plugin-authoring/_menu.haml
+++ b/source/plugin-authoring/_menu.haml
@@ -4,6 +4,7 @@
       = link_to 'Overview', '/plugin-authoring/'
       %ul
         %li= link_to 'Plugin types', '/plugin-authoring/#plugin-types'
+        %li= link_to 'Plugin loading', '/plugin-authoring/#plugin-loading'
     %li
       = link_to 'Adapters', '/plugin-authoring/adapters/'
       %ul
