--- a/source/plugin-authoring/index.html.haml
+++ b/source/plugin-authoring/index.html.haml
@@ -25,3 +25,13 @@ title: Plugin Authoring
       %p <strong>Handlers</strong> add new functionality that users will interface with at runtime. This includes chat routes (Lita's ability to reply to messages with certain patterns) and HTTP routes (for responding to HTTP requests to certain URLs). The behavior of both chat routes and HTTP routes can be arbitrarily complex. You're encouraged to write handlers to make Lita do things that are useful to you. Handlers provide methods to easily define and configure chat and HTTP routes, and various convenience methods for storing data, making HTTP requests, and sending messages back to users or chat rooms.
 
       %p <strong>Extensions</strong> are a special type of plugin that provide new functionality for developing other plugins and extending the core Lita framework. Extensions achieve this by registering callbacks with various hooks exposed by Lita. Extensions are an advanced topic and in most cases you won't need to write one, though you may find extensions that provide features you'd like to use in your own plugins.
+
+      %h3#plugin-loading Plugin loading
+
+      %p Plugins are just Ruby classes that have been added to Lita's plugin registry before the robot starts up. When an adapter plugin is registered, it becomes available to use, but must be specified by name in the user's configuration file for the robot to use it. When a handler or extension is registered, it is always loaded and active when the robot is running.
+
+      %p The recommended way to create a plugin is to use the generator commands that are part of the <kbd>lita</kbd> executable and covered in more detail later in this guide. The generators will create a directory of files that can be published as a gem and loaded via RubyGems and Bundler, which will automatically activate them just by putting them in the user's Gemfile.
+
+      %p If you prefer to keep your own plugins private, and don't want to deal with the extra boilerplate required to maintain each plugin as a separate gem, you can also just require plain Ruby files inside your Lita project directory at the top of the <code>lita_config.rb</code> file.
+
+      %p To interact with a plugin locally while developing it, just run Lita from inside the plugin's directory with <kbd>bundle exec lita</kbd>, and the plugin will be loaded into the robot's registry.
